--- a/package.json
+++ b/package.json
@@ -14,11 +14,23 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@safe-global/account-abstraction-kit-poc": "^1.3.0",
+    "@safe-global/auth-kit": "^1.2.1",
+    "@safe-global/onramp-kit": "^1.4.0",
+    "@safe-global/protocol-kit": "^1.3.0",
+    "@safe-global/relay-kit": "^1.3.0",
     "@safe-global/safe-react-components": "^2.0.6",
-    "ethers": "^6.8.0",
+    "@web3auth/base": "4.3.0",
+    "@web3auth/modal": "4.3.1",
+    "@web3auth/openlogin-adapter": "4.3.0",
+    "avataaars": "^2.0.0",
+    "ethers": "5.6.9",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
