--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@safe-global/protocol-kit": "^1.3.0",
     "@safe-global/relay-kit": "^1.3.0",
     "@safe-global/safe-react-components": "^2.0.6",
+    "@stripe/crypto": "^0.0.4",
+    "@stripe/stripe-js": "^2.1.9",
     "@web3auth/base": "4.3.0",
     "@web3auth/modal": "4.3.1",
     "@web3auth/openlogin-adapter": "4.3.0",
